# pexels-uri-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
src/photos/: curated.rs  get_photo.rs  mod.rs  search.rs
src/videos/: get_video.rs  mod.rs  popular.rs  search.rs
